2019-01-14  Cam Webb  <cw@camwebb.info>

	* NEWS: First version committed to Sourceforge.
