@@ -1,1 +1,2 @@
-sf_build/gawkextlib-code*
+sf_build/u-ctenolophon-gawkextlib*
+aregex.so
