@@ -1,3 +1,7 @@
+2019-05-13  Cam Webb <cw@camwebb.info>
+	
+	* aregex.c (main): fixed major memory leak. Needed to add tre_regfree()
+
 2019-01-14  Cam Webb  <cw@camwebb.info>
 
 	* NEWS: First version committed to Sourceforge.
